升级到Spring Boot 4并现代化DEPS
Bumps 项目转为 Spring Boot 4，并更新相关元数据（README，CLAUDE.md）。pom.xml：父 -> 4.0.7，MyBatis-Plus 和 Spring AI 版本更新，将 Web Starter 替换为 webmvc，使用 aspectj 启动器，调整 Jackson 坐标，添加 Flyway 插件和 OpenRewrite。代码现代化：用构造器注入替换字段@Autowired，使用Path.of、Optional、Objects.requireNonNull、ThreadLocalRandom和数组模式匹配;将 JacksonConfig 重构为 JsonMapper，调整 Quartz/Actuator API 变更，进行小的 WebSocket 和文件 I/O 修复，以及其他兼容性/导入调整。